--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,13 @@
     </build>
 
     <dependencies>
-<!--         Ваши зависимости-->
-         <!-- https://mvnrepository.com/artifact/junit/junit -->
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>6.1.12</version>
+        </dependency>
+
          <dependency>
              <groupId>junit</groupId>
              <artifactId>junit</artifactId>
